# SimpleChat-Client

./: .clangd  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  LICENSE  README.md  binding.gyp  compile_commands.json  package-lock.json  test.cpp  xmake.lua
.cache/clangd/index/: Concepts.hpp.19E9A923A9BED315.idx  Connect.cpp.5B658E6FBBE17B9F.idx  Connect.cpp.C2AB6E5ABF14BEAF.idx  Connect.hpp.E0C8BBFA8E92F081.idx  Connection.cpp.158A7A1E8C18313D.idx  Connection.cpp.EE82C932DF2888B1.idx  Connection.hpp.215E11F514AB0408.idx  Connection.hpp.A80FF25B448CC215.idx  Context.hpp.1A86D4332644FABD.idx  EventLoop.cpp.CDFF3ECA43659975.idx  EventLoop.cpp.DAD6278D8ADC7DF5.idx  EventLoop.hpp.11DB5BFEFD8BBD3C.idx  EventLoop.hpp.81146207938544B0.idx  Function.hpp.BE688D293F454624.idx  Listen.cpp.E02127328FF6AEAE.idx  Loop.cpp.6B1A45AC358AEF36.idx  Loop.cpp.E95B21ACFB088682.idx  Loop.hpp.6169280A7D6A684E.idx  Loop.hpp.8DDE5FFD1C4B8F4E.idx  MessageType.hpp.355ADA2C6F335D68.idx  MessageType.hpp.E80323148B0EFFF8.idx  ResponseError.hpp.7C7D94373A0D0172.idx  ResponseRoute.hpp.400BAE39B67A23C9.idx  ResponseRoute.hpp.E0564A461D36F8D6.idx  ResponseSender.hpp.E62E4ED326BCB7CB.idx  SendRequest.cpp.3150BDAD77BD1530.idx  SendRequest.cpp.5F88B6873757B2C1.idx  SentRequest.cpp.357A0CAA6273CB2E.idx  home.cpp.5532F48CEC056D48.idx  home.cpp.BEDC1A69D0605CBC.idx  login.cpp.B0BB6E9867AD9132.idx  login.cpp.CC571EC0B3DA0697.idx  login.hpp.E0C022C63571EBBD.idx  main.cpp.B3ABC7DCFB538C26.idx  main.cpp.FC89F6A009624E8C.idx  screen.cpp.1D612C708F826163.idx  screen.cpp.442362F5AA62B23B.idx  screen.hpp.6C580D2E226E301E.idx  screen.hpp.9105E0389230D57E.idx  test.cpp.094556B9BD7EA052.idx  (+4 more)
.xmake/linux/x86_64/cache/: config  detect  history  package  references  toolchain
Test/: WebsocketEchoServer.py
electron/: index.html  main.js  package.json  preload.js  tailwind.config.js
electron/common/: logger.js
electron/renderer/: README.md  app.js  logger.js
electron/renderer/GUI/: dom.js  uiManager.js
electron/renderer/Logic/: session.js  testApi.js
electron/renderer/Network/: connection.js
electron/renderer/Utils/: logger.js
electron/renderer/core/: native.js
electron/renderer/styles/: app.css  custom-additions.css  tailwind.css  tw.css
electron/scripts/: prepare-native.js
electron/ui/: package.json  tailwind.config.js  vite.config.ts
electron/ui/src/: App.tsx  bridge.d.ts  index.css
electron/ui/src/components/: Modal.tsx
electron/ui/src/components/ui/: button.tsx  card.tsx  input.tsx
electron/ui/src/lib/: native.ts  utils.ts
extra/TUI/: message.hpp  screen.hpp  screen.hpp~
extra/src/: screen.cpp  screen.cpp~
include/Async/: EventLoop.hpp  JsScheduler.hpp  Loop.hpp
include/GUI/: Bind.hpp  Chat.html  GUI.hpp  Login.html  index.html
include/Logic/: LogicType.hpp  Session.hpp
include/Network/: Concepts.hpp  Connect.hpp  Connection.hpp  MessageType.hpp  ResponseError.hpp  ResponseRoute.hpp  ResponseSender.hpp  SentRequest.hpp
include/TUI/: login.hpp  screen.hpp
include/Utils/: Function.hpp  FunctionTraits.hpp  GenericFormatter.hpp  Logger.hpp  Retry.hpp  SenderTraits.hpp
safety/: certificate.crt  dh2048.pem  private.key
security/: ca.crt  ca.key  ca.srl  dh2048.pem  server.crt  server.csr  server.key
src/: daemon.cpp  main.cpp  main.cpp~
src/Async/: EventLoop.cpp  Loop.cpp
src/GUI/: Callback.cpp
src/Logic/: SignIn.cpp
src/Native/: addon.cpp
src/Network/: Connect.cpp  Listen.cpp  SendRequest.cpp  SentRequest.cpp
src/TUI/: login.cpp  screen.cpp  screen.cpp~
src/Utils/: Logger.cpp
test/: WebsocketEchoServer.py  requirements.txt
